<resources>
    <string name="app_name">GardenApp</string>
    <string name="smart_garden">Smart Garden</string>
    <string name="light_system">Light System</string>
    <string name="led1">Led1</string>
    <string name="on_off">ON/OFF</string>
    <string name="light_system">Light System</string>
    <string name="led2">Led2</string>
    <string name="allarm">allarm</string>
    <string name="led3">Led3</string>
    <string name="led4">Led4</string>
    <string name="irrigation_system">Irrigation System</string>
    <string name="open_close">OPEN/CLOSE</string>
    <string name="require_manual_control">Require Manual Control</string>
</resources>