<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/smart_garden"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:srcCompat="@drawable/ic_baseline_notifications_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/allarm" />

    <TextView
        android:id="@+id/light_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/light_system"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/light_system_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/light_system"
        />

    <TextView
        android:id="@+id/led1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/led1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/light_system_divider" />

    <Button
        android:id="@+id/led1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_off"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/led1"
    />

    <TextView
        android:id="@+id/led2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/led2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/led1_button"
        app:layout_constraintTop_toBottomOf="@id/light_system_divider" />

    <Button
        android:id="@+id/led2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_off"
        android:layout_margin="12dp"
        app:layout_constraintStart_toEndOf="@id/led1_button"
        app:layout_constraintTop_toBottomOf="@id/led2"
        />


    <TextView
        android:id="@+id/led3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/led3"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/led1_button" />

    <com.google.android.material.slider.Slider
        android:id="@+id/led3_slider"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="4.0"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/led3"  />

    <TextView
        android:id="@+id/led4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/led4"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/led3_slider"
        app:layout_constraintTop_toBottomOf="@id/led2_button" />

    <com.google.android.material.slider.Slider
        android:id="@+id/led4_slider"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="4.0"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toEndOf="@id/led3_slider"
        app:layout_constraintTop_toBottomOf="@id/led4"  />

    <TextView
        android:id="@+id/irrigation_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/irrigation_system"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/led3_slider" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/irrigation_system_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/irrigation_system"
        />

    <Button
        android:id="@+id/irrigation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_close"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/irrigation_system_divider"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/irrigation_slider"
        android:stepSize="1.0"
        android:valueFrom="0.0"
        android:valueTo="4.0"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toEndOf="@id/irrigation_button"
        app:layout_constraintTop_toBottomOf="@id/irrigation_system_divider"  />

    <Button
        android:id="@+id/manual_control_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_manual_control"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/irrigation_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>